name:                google-oauth
version:             0.1.0.0
synopsis:            Test and validate oauth process
-- description:         
homepage:            https://awasthishubh.github.io/google-oauth/
license:             MIT
license-file:        LICENSE
author:              Shubham Awasthi
maintainer:          aw.shubh@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable google-oauth
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <4.10
                     , scotty
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010